Create button_normal mixin

--- a/style.less
+++ b/style.less
@@ -62,8 +62,7 @@ h3 {
 
 p { margin: 0 0 .7em 0; }
 
-
-a.btn {
+.button_normal() {
 	display: inline-block;
 	padding: 4px 16px 2px 16px;
 	border-radius: 8px;
