Apply button_normal mixin to buttons in article and aside

--- a/style.less
+++ b/style.less
@@ -71,3 +71,11 @@ p { margin: 0 0 .7em 0; }
 	text-decoration: none;
 	background-color: #fff;
 }
+
+article a.btn {
+	.button_normal();
+}
+
+aside a.btn {
+	.button_normal();
+}
