Define button_hover mixin

--- a/style.less
+++ b/style.less
@@ -73,6 +73,11 @@ p { margin: 0 0 .7em 0; }
 	background-color: @background;
 }
 
+.button_hover(@text, @background) {
+	color: @text;
+	background-color: @background;
+}
+
 article a.btn {
 	.button_normal(#fff, #8cc428, #8cc428);
 }
