--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Domine:400,700|Vast+Shadow');
 /*  This file was provided as part of a weekly web design tutorial series.
 	Sign-up for our newsletter, at http://codifydesign.com, to be notified
 	about each new episode of CSS Shorts
 */
-@import url('https://fonts.googleapis.com/css?family=Domine:400,700|Vast+Shadow');
 body {
   margin: 0;
   padding: 0;
@@ -61,12 +61,43 @@ h3 {
 p {
   margin: 0 0 .7em 0;
 }
-a.btn {
+article a.btn {
+  color: #ffffff;
   display: inline-block;
   padding: 4px 16px 2px 16px;
   border-radius: 8px;
   font-size: .9em;
-  border: 1px solid #fff;
+  border: 1px solid #8cc428;
   text-decoration: none;
-  background-color: #fff;
+  background-color: #8cc428;
+}
+article a.btn::after {
+  content: '\25BA';
+  font-size: 0.8em;
+  padding-left: 6px;
+  opacity: .65;
+}
+article a.btn:hover {
+  color: #000000;
+  background-color: #ffffff;
+}
+aside a.btn {
+  color: #72b003;
+  display: inline-block;
+  padding: 4px 16px 2px 16px;
+  border-radius: 8px;
+  font-size: .9em;
+  border: 1px solid #ffffff;
+  text-decoration: none;
+  background-color: #ffffff;
+}
+aside a.btn::after {
+  content: '\25BA';
+  font-size: 0.8em;
+  padding-left: 6px;
+  opacity: .65;
+}
+aside a.btn:hover {
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.3);
 }
